# openusage

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Package.resolved  README.md  README_zh-TW.md
.github/workflows/: build-dmg.yml  deploy-pages.yml  release.yml
Tests/OpenUsageTests/: AntigravityLayoutTests.swift  AntigravityProviderTests.swift  AntigravityQuotaSummaryTests.swift  ClaudeProviderTests.swift  CodexLogUsageScannerTests.swift  CodexProviderTests.swift  CredentialCacheIntegrityTests.swift  CursorOptionalEndpointTests.swift  CursorProviderTests.swift  CursorUsageSummaryTests.swift  FailureBackoffTests.swift  GrokLogUsageScannerTests.swift  ICloudUsageSyncStoreTests.swift  IncrementalJSONLScannerTests.swift  LaunchAtLoginSettingTests.swift  LayoutPersistenceTests.swift  LayoutStoreTests.swift  LocalLimitsAPITests.swift  LogFileTests.swift  LoginShellEnvironmentTests.swift  MenuBarContentTests.swift  MenuBarStripMemoTests.swift  MenuBarStripTrimTests.swift  ModelPricingStoreTests.swift  OpenCodeAuthStoreTests.swift  OpenCodeGoWindowsTests.swift  OpenCodeLayoutTests.swift  OpenCodeProviderTests.swift  OpenCodeUsageMapperTests.swift  OpenCodeUsageScannerTests.swift  PaceTests.swift  PanelHeightBridgeTests.swift  PopoverTransparencyStyleTests.swift  PricingBundledResourceTests.swift  ProviderAuthRetryTests.swift  ProviderEnablementEnforcementTests.swift  ProviderEnablementStoreTests.swift  ProviderLinksTests.swift  ProviderParseTests.swift  ProvisioningProfileScriptTests.swift  (+12 more)
docs/: README.md  adding-a-provider.md  architecture.md  dashboard.md  icloud-sync.md  local-http-api.md  logging.md  menu-bar.md  pricing.md  privacy.md  refreshing.md  settings.md
docs/providers/: antigravity.md  claude.md  codex.md  cursor.md  opencode.md  openrouter.md  (+1 more)
script/: OpenUsage.release.entitlements.plist  build_and_run.sh  find_icloud_provisioning_profile.sh  release.sh  render_icloud_entitlements.sh
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  log_path.rs  tray.rs
src-tauri/src/plugin_engine/: host_api.rs
(+104 files in other folders)
